DuPont DevSB/src/objects/Future_Business_Development__c.object
<CustomObject>
    <description>Used to capture and track new product, marketing or business ideas.</description>
    <fields>
        <fullName>Actual_Commercial_Date__c</fullName>
        <description>Actual date this project or development opportunity is commericalized</description>
        <label>Actual Commercial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approach__c</fullName>
        <label>Approach</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pursue with existing products</fullName>
                </value>
                <value>
                    <fullName>Applications development project</fullName>
                </value>
                <value>
                    <fullName>Product development - minor</fullName>
                </value>
                <value>
                    <fullName>Product development - major</fullName>
                </value>
                <value>
                    <fullName>Immediately Actionable</fullName>
                </value>
                <value>
                    <fullName>Cross BU Opportunity</fullName>
                </value>
                <value>
                    <fullName>Product Development Required</fullName>
                </value>
                <value>
                    <fullName>No Action</fullName>
                </value>
                <value>
                    <fullName>Existing Product - New Market</fullName>
                </value>
                <value>
                    <fullName>Existing Product - New Application</fullName>
                </value>
                <value>
                    <fullName>New Product - Current Market</fullName>
                </value>
                <value>
                    <fullName>New Product - New Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capability_and_Fit_Comments__c</fullName>
        <label>Capability and Fit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Capability_and_Fit_Score__c</fullName>
        <label>Capability and Fit Score</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competency_Required__c</fullName>
        <label>Competency Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Upgrade Existing</fullName>
                </value>
                <value>
                    <fullName>New Competency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Environment__c</fullName>
        <label>Competitive Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Dominant Player(s)</fullName>
                </value>
                <value>
                    <fullName>Some Differentiated Players</fullName>
                </value>
                <value>
                    <fullName>Highly Competitive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Information_Comments__c</fullName>
        <label>Competitive Information Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Critical_Success_Factors__c</fullName>
        <label>Critical Success Factors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_in_Current_Stage__c</fullName>
        <formula>TODAY() - Stage_Change_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Est_Rev_Y1__c</fullName>
        <description>Estimated Revenue - Year 1</description>
        <label>Est Rev Y1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Rev_Y4__c</fullName>
        <description>Estimated Revenue - Year 4</description>
        <label>Est Rev Y4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Gross_Margin__c</fullName>
        <description>Estimated Gross Margin based on profitability in this part of Value Chain</description>
        <inlineHelpText>Estimated Gross Margin based on profitability in this part of Value Chain</inlineHelpText>
        <label>Estimated Gross Margin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;45%</fullName>
                </value>
                <value>
                    <fullName>30 – 45%</fullName>
                </value>
                <value>
                    <fullName>&lt;30%</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Commercialization_Date__c</fullName>
        <description>Date on which commercialization is expected to occur.</description>
        <label>Expected Commercialization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Value_Proposition__c</fullName>
        <description>Differentiation this idea provides for DuPont and customer&apos;s willingness to pay for it</description>
        <label>Expected Value Proposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strong for broad market</fullName>
                </value>
                <value>
                    <fullName>Strong for niche market</fullName>
                </value>
                <value>
                    <fullName>Not much differentiation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FutureBusinessDevelopmentName__c</fullName>
        <label>Future Business Development Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intellectual_Property__c</fullName>
        <label>Intellectual Property</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Patent Protected</fullName>
                </value>
                <value>
                    <fullName>Limited Protection</fullName>
                </value>
                <value>
                    <fullName>No Protection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Leverage_Potential__c</fullName>
        <label>Leverage Potential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Attractiveness_Comments__c</fullName>
        <label>Market Attractiveness Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market_Attractiveness_Score__c</fullName>
        <label>Market Attractiveness Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Barriers__c</fullName>
        <inlineHelpText>Potential of customer / market adoption.</inlineHelpText>
        <label>Market Barriers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Requires Development</fullName>
                </value>
                <value>
                    <fullName>Significant Barriers</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Channel_Advantage__c</fullName>
        <label>Market Channel Advantage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Growth_Rate__c</fullName>
        <label>Market Growth Rate Annual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;15%</fullName>
                </value>
                <value>
                    <fullName>5% ~ 15%</fullName>
                </value>
                <value>
                    <fullName>&gt; 20%</fullName>
                </value>
                <value>
                    <fullName>5-20%</fullName>
                </value>
                <value>
                    <fullName>&lt; 5%</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Owning_Organization__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Bio Metal</fullName>
                </value>
                <value>
                    <fullName>Bio Other</fullName>
                </value>
                <value>
                    <fullName>CC Actuator</fullName>
                </value>
                <value>
                    <fullName>CC Tag</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Defogger</fullName>
                </value>
                <value>
                    <fullName>Displays</fullName>
                </value>
                <value>
                    <fullName>Emerging Others</fullName>
                </value>
                <value>
                    <fullName>Energy Storage</fullName>
                </value>
                <value>
                    <fullName>High Reliability</fullName>
                </value>
                <value>
                    <fullName>Lighting</fullName>
                </value>
                <value>
                    <fullName>Medical / Healthcare</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>MTS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Photovoltaic</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>PV</fullName>
                </value>
                <value>
                    <fullName>PV Ag</fullName>
                </value>
                <value>
                    <fullName>PV Al</fullName>
                </value>
                <value>
                    <fullName>PV Emerging</fullName>
                </value>
                <value>
                    <fullName>RC</fullName>
                </value>
                <value>
                    <fullName>Semiconductor Material</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>THH</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Wire Insulation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Size_Annual__c</fullName>
        <inlineHelpText>Amounts are USD.</inlineHelpText>
        <label>Market Size Annual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;$20MM</fullName>
                </value>
                <value>
                    <fullName>&gt;$5MM</fullName>
                </value>
                <value>
                    <fullName>&lt;$5MM</fullName>
                </value>
                <value>
                    <fullName>&gt; $ 250 MM</fullName>
                </value>
                <value>
                    <fullName>$ 50-250 MM</fullName>
                </value>
                <value>
                    <fullName>&lt; $ 50 MM</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_SubSegment__c</fullName>
        <label>Market SubSegment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Market_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aero Wire</fullName>
                </value>
                <value>
                    <fullName>Auto HF Detection / Radar System</fullName>
                </value>
                <value>
                    <fullName>Auto High Temp Sensor</fullName>
                </value>
                <value>
                    <fullName>Auto Hybrid Control</fullName>
                </value>
                <value>
                    <fullName>CC Actuator</fullName>
                </value>
                <value>
                    <fullName>CC Multilayer</fullName>
                </value>
                <value>
                    <fullName>Control</fullName>
                </value>
                <value>
                    <fullName>Defogger</fullName>
                </value>
                <value>
                    <fullName>Digital Camera</fullName>
                </value>
                <value>
                    <fullName>Electro Lum</fullName>
                </value>
                <value>
                    <fullName>Flex Printed Circuits (Kapton®)</fullName>
                </value>
                <value>
                    <fullName>Fuel Cells</fullName>
                </value>
                <value>
                    <fullName>Grid Connected Back Face</fullName>
                </value>
                <value>
                    <fullName>Grid Connected Front Face</fullName>
                </value>
                <value>
                    <fullName>Hard Disk Drives</fullName>
                </value>
                <value>
                    <fullName>High End Computer</fullName>
                </value>
                <value>
                    <fullName>High Performance Wire</fullName>
                </value>
                <value>
                    <fullName>High Reliability HF - Others</fullName>
                </value>
                <value>
                    <fullName>High Reliability LF - Others</fullName>
                </value>
                <value>
                    <fullName>High Speed Digital</fullName>
                </value>
                <value>
                    <fullName>Industrial/Commercial</fullName>
                </value>
                <value>
                    <fullName>Liquid Crystal Modules</fullName>
                </value>
                <value>
                    <fullName>Loud Speaker Components</fullName>
                </value>
                <value>
                    <fullName>Magnet Wire</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Medical Sensors</fullName>
                </value>
                <value>
                    <fullName>Membrane Touch Switches</fullName>
                </value>
                <value>
                    <fullName>Mobile Phones</fullName>
                </value>
                <value>
                    <fullName>Motor Insulation</fullName>
                </value>
                <value>
                    <fullName>MP3/Personal Computer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Competitors__c</fullName>
        <description>Estimated number of competitors for this new market or product development</description>
        <label>Number of Competitors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;2</fullName>
                </value>
                <value>
                    <fullName>2-4</fullName>
                </value>
                <value>
                    <fullName>&gt;5</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operational_Fit__c</fullName>
        <label>Operational Fit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capabilities exist</fullName>
                </value>
                <value>
                    <fullName>Some new capabilities needed</fullName>
                </value>
                <value>
                    <fullName>Significant capability gap</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Business__c</fullName>
        <label>Owning Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industrial Biosciences</fullName>
                </value>
                <value>
                    <fullName>Building Innovations</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Crop Protection</fullName>
                </value>
                <value>
                    <fullName>DuPont Chemicals &amp; Fluoroproducts</fullName>
                </value>
                <value>
                    <fullName>DuPont Protection Technologies</fullName>
                </value>
                <value>
                    <fullName>Electronics &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>Nutrition &amp; Health</fullName>
                </value>
                <value>
                    <fullName>Packaging &amp; Industrial Polymers</fullName>
                </value>
                <value>
                    <fullName>Performance Polymers</fullName>
                </value>
                <value>
                    <fullName>Titanium Technologies</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CORP-Innovation Center</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>Digital Printing</fullName>
                </value>
                <value>
                    <fullName>DPP-Poly</fullName>
                </value>
                <value>
                    <fullName>DPVS</fullName>
                </value>
                <value>
                    <fullName>E&amp;C-Other</fullName>
                </value>
                <value>
                    <fullName>EKC</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>MCM</fullName>
                </value>
                <value>
                    <fullName>OLED Displays</fullName>
                </value>
                <value>
                    <fullName>Packaging Graphics</fullName>
                </value>
                <value>
                    <fullName>PVFM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CORP-IC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quadrant__c</fullName>
        <label>Quadrant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1 - Existing Application/Existing Technology</fullName>
                </value>
                <value>
                    <fullName>Q2 - New Application/Existing Technology</fullName>
                </value>
                <value>
                    <fullName>Q3 – New Application/New Technology</fullName>
                </value>
                <value>
                    <fullName>Q4 – Existing Application/New Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Competency__c</fullName>
        <label>Related Competency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Polyimide Chemistry</fullName>
                </value>
                <value>
                    <fullName>Filler for polyimide, epoxy &amp; acrylic</fullName>
                </value>
                <value>
                    <fullName>Coating technology</fullName>
                </value>
                <value>
                    <fullName>Epoxy formulation</fullName>
                </value>
                <value>
                    <fullName>Multi-layer polyimide film capability</fullName>
                </value>
                <value>
                    <fullName>Acrylic chemistry</fullName>
                </value>
                <value>
                    <fullName>Resist formulation</fullName>
                </value>
                <value>
                    <fullName>Photochemistry</fullName>
                </value>
                <value>
                    <fullName>Teflon lamination capability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead from which this Business Development or Innovation Idea is Generated</description>
        <inlineHelpText>Lead from which this Business Development or Innovation Idea is Generated</inlineHelpText>
        <label>Related Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Business Development Ideas</relationshipLabel>
        <relationshipName>BusinessDevelopmentIdeas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_User_Type__c</fullName>
        <description>Role or Type of user related to this Future Business Development</description>
        <label>Related User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BU Project Owner</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relevant_Offering_Comments__c</fullName>
        <label>Relevant Offering Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relevant_Offerings_Technology__c</fullName>
        <label>Relevant Offerings / Technology</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sheet &amp; Specialty Laminates (Pyralux®)</fullName>
                </value>
                <value>
                    <fullName>Roll Laminates (Pyralux® AC, AK, AT, AX)</fullName>
                </value>
                <value>
                    <fullName>Coverlays (Pyralux®, Nikaflex®)</fullName>
                </value>
                <value>
                    <fullName>Dry Film Resists (Riston®, Vacrel®)</fullName>
                </value>
                <value>
                    <fullName>Phototools (Cronavue®, Idealine®)</fullName>
                </value>
                <value>
                    <fullName>Fluoro Laminates (Kapton® F Series)</fullName>
                </value>
                <value>
                    <fullName>Polyimide Films (All other Kapton®)</fullName>
                </value>
                <value>
                    <fullName>WLP</fullName>
                </value>
                <value>
                    <fullName>Coolam LX, LC</fullName>
                </value>
                <value>
                    <fullName>Other (Provide detail in Comment Field)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Year_1__c</fullName>
        <description>The amount of revenue for the first year of the project (or related opportunity).</description>
        <label>Revenue Year 1</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Year_2__c</fullName>
        <description>The amount of revenue for the second year of the project (or related opportunity).</description>
        <label>Revenue Year 2</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Year_3__c</fullName>
        <description>The amount of revenue for the third year of the project (or related opportunity).</description>
        <label>Revenue Year 3</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secondary_Research_Needed__c</fullName>
        <label>Secondary Research Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer lead passive</fullName>
                </value>
                <value>
                    <fullName>Customer lead active</fullName>
                </value>
                <value>
                    <fullName>Brainstorming</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Change_Date__c</fullName>
        <label>Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received Unscreened idea</fullName>
                </value>
                <value>
                    <fullName>Assigned to Sales</fullName>
                </value>
                <value>
                    <fullName>Assigned to Marketing</fullName>
                </value>
                <value>
                    <fullName>Under New Business Development review</fullName>
                </value>
                <value>
                    <fullName>Under Rapid Market Assessment</fullName>
                </value>
                <value>
                    <fullName>Completed RMA Transferred to MDLs</fullName>
                </value>
                <value>
                    <fullName>Forwarded to other BUs</fullName>
                </value>
                <value>
                    <fullName>Screened prioritized unvalidated idea</fullName>
                </value>
                <value>
                    <fullName>Validated prioritized unfunded idea</fullName>
                </value>
                <value>
                    <fullName>Project initiated</fullName>
                </value>
                <value>
                    <fullName>Drop</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Project Commercialized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Behind Schedule</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy_Fit__c</fullName>
        <label>Strategy Fit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Modest</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_by__c</fullName>
        <label>Submitted by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>